[package]
name = "ruckus_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
opentelemetry = { version = "0.24.0", features = ["metrics", "otel_unstable"] }
opentelemetry-prometheus = { version = "0.17.0", features = ["prometheus-encoding"] }
opentelemetry_sdk = { version = "0.24.0", features = ["metrics", "rt-tokio"] }
prometheus = "0.13.4"
reqwest = { version = "0.12.9", features = ["cookies"] }
rocket = "0.5.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }

